<resources>
    <string name="app_name">RalliKuulekus</string>
    <string name="uus_joonis">UUS JOONIS</string>
    <string name="lae_joonis">LAE JOONIS</string>
    <string name="name">Nimi</string>
    <string name="description">Kirjeldus</string>
    <string name="create_schema">Loo joonis</string>
    <string name="rk1">rk1</string>
    <string name="rk2">rk2</string>
    <string name="rk3">rk3</string>
    <string name="rk4">rk4</string>
    <string name="sign">sign</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salvesta">Salvesta</string>
    <string name="salvesta_ja_ekspordi">Salvesta ja ekspordi</string>
    <string name="muuda">Muuda</string>
    <string name="kustuta">Kustuta</string>
    <string name="background">background</string>
    <string name="loo_uus_joonis">Loo uus joonis</string>
    <string name="menü">menu</string>
    <string name="menu">menüü</string>
    <string name="mainMenu">Peamenüü</string>
    <string name="exit">Välju</string>
</resources>
