<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_layout_edit"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="false"
    android:longClickable="false"
    tools:context=".fragments.FragmentEdit">

    <TextView
        android:id="@+id/text_view_sign_edit_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_sign_edit"
        android:layout_width="180dp"
        android:layout_height="127dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/sign"
        android:src="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/button_turn_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_turn_left"
        app:layout_constraintTop_toBottomOf="@+id/text_view_sign_edit_heading" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_turn_left"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        app:icon="@drawable/ic_menu_24px"
        app:layout_constraintEnd_toStartOf="@+id/image_view_sign_edit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_sign_edit_heading" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_turn_right"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        app:icon="@drawable/ic_menu_24px"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_view_sign_edit"
        app:layout_constraintTop_toBottomOf="@+id/text_view_sign_edit_heading" />

    <TextView
        android:id="@+id/text_view_sign_edit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_sign_edit" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_change_sign"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/muuda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_sign_edit_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete_sign"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/kustuta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_change_sign" />


</androidx.constraintlayout.widget.ConstraintLayout>